{
    "name": "CharacterActions",
    "maps": [
        {
            "name": "Movement",
            "id": "16fb8473-842b-4e86-95e8-97fe35b8c877",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "2789cf35-a1f2-48df-81f8-246af56ce5ad",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "ab423813-b4be-4f97-b128-d77f85e18eb7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4493fb05-a850-48d2-9595-80975b2cf97c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a010c97c-ac96-445a-a502-ffd8fcdffc22",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9e810a6e-06f1-4a1a-b63e-8d0c975e938f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "91b5073b-4bc6-486b-91e3-0538f6a35a03",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "a8885025-79d9-4b34-8fec-91b830dab23b",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "0a9ff5c5-060e-4fe0-a8a1-a5d8ba0d7d32",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "92f6ac23-377c-40ef-b0c8-f3e94569598a",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Gameplay",
            "id": "02faf445-a418-433a-9dc2-7b7557405b5b",
            "actions": [
                {
                    "name": "PickUp",
                    "type": "Button",
                    "id": "67b3fb20-3d47-47ba-87e6-9cd4fc786e5c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PutDown",
                    "type": "Button",
                    "id": "5562a892-04e7-4c3e-80f1-8bb76ad381c6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f3bd7271-ff30-4e9a-85a6-87477c039c0f",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de9a8324-79d3-45d5-9bfb-9d430fab91c1",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PutDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}